@@ -1,9 +1,8 @@
 package no.nav.regoppslag.consumer.digdirkrr;
 
-
+import no.nav.regoppslag.consumer.azure.AzureProperties;
 import no.nav.regoppslag.consumer.azure.TokenConsumer;
 import no.nav.regoppslag.consumer.azure.TokenResponse;
-import no.nav.regoppslag.consumer.azure.AzureProperties;
 import no.nav.regoppslag.exceptions.DigitalKontaktinformasjonFunctionalException;
 import no.nav.regoppslag.exceptions.DigitalKontaktinformasjonTechnicalException;
 import no.nav.regoppslag.exceptions.RegOppslagIkkeFunnetException;
@@ -15,7 +14,6 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Component;
@@ -24,20 +22,20 @@ import org.springframework.web.client.HttpServerErrorException;
 import org.springframework.web.client.RestTemplate;
 
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static java.lang.String.format;
 import static no.nav.regoppslag.metrics.MetricLabels.DOK_CONSUMER;
 import static no.nav.regoppslag.metrics.MetricLabels.PROCESS_CODE;
 import static no.nav.regoppslag.util.MDCConstants.APP_ID;
-import static no.nav.regoppslag.util.MDCConstants.BEARER_PREFIX;
 import static no.nav.regoppslag.util.MDCConstants.CALL_ID;
 import static no.nav.regoppslag.util.MDCConstants.NAV_CALL_ID;
 import static no.nav.regoppslag.util.MDCConstants.NAV_CONSUMER_ID;
 import static no.nav.regoppslag.util.MDCConstants.NAV_PERSONIDENTER;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static org.springframework.http.HttpStatus.BAD_REQUEST;
+import static org.springframework.http.MediaType.APPLICATION_JSON;
 
 @Component
 public class DigitalKontaktinformasjon {
@@ -48,33 +46,35 @@ public class DigitalKontaktinformasjon {
 	private final AzureProperties azureProperties;
 
 	public static final String HENT_SIKKER_DIGITAL_POSTADRESSE = "hentSikkerDigitalPostadresse";
-	public static final String INGEN_KONTAKTINFORMASJON_FEILMELDING = "Ingen kontaktinformasjon er registrert på personen";
 
 	@Autowired
 	public DigitalKontaktinformasjon(RestTemplateBuilder restTemplateBuilder,
 									 @Value("${digdir_krr_proxy_url}") String digdirKrrUrl,
-									 TokenConsumer tokenConsumer, AzureProperties azureProperties) {
+									 TokenConsumer tokenConsumer,
+									 AzureProperties azureProperties) {
+		this.digdirKrrUrl = digdirKrrUrl;
+		this.tokenConsumer = tokenConsumer;
+		this.azureProperties = azureProperties;
 		this.restTemplate = restTemplateBuilder
 				.setReadTimeout(Duration.ofSeconds(20))
 				.setConnectTimeout(Duration.ofSeconds(5))
 				.build();
-		this.digdirKrrUrl = digdirKrrUrl;
-		this.tokenConsumer = tokenConsumer;
-		this.azureProperties = azureProperties;
 	}
 
 	@Retryable(include = RegOppslagTechnicalException.class, maxAttempts = 5, backoff = @Backoff(delay = 200))
 	@Metrics(value = DOK_CONSUMER, extraTags = {PROCESS_CODE, HENT_SIKKER_DIGITAL_POSTADRESSE}, percentiles = {0.5, 0.95}, histogram = true)
 	public String hentSpraak(final String personidentifikator, final boolean inkluderSikkerDigitalPost) throws DigitalKontaktinformasjonFunctionalException {
 		HttpHeaders headers = createHeaders();
+
 		if (isBlank(personidentifikator)) {
 			throw new RegOppslagIkkeFunnetException("Personidentifikator kan ikke være null", BAD_REQUEST);
 		}
+
 		final String fnrTrimmed = personidentifikator.trim();
 		headers.add(NAV_PERSONIDENTER, fnrTrimmed);
 
 		try {
-			PostPersonerRequest postPersonRequest = PostPersonerRequest.builder().personidenter(Arrays.asList(fnrTrimmed)).build();
+			PostPersonerRequest postPersonRequest = PostPersonerRequest.builder().personidenter(List.of(fnrTrimmed)).build();
 			HttpEntity<String> request = new HttpEntity(postPersonRequest, headers);
 			DkifResponse response = restTemplate.postForEntity(digdirKrrUrl + "/rest/v1/personer?inkluderSikkerDigitalPost="+inkluderSikkerDigitalPost, request, DkifResponse.class).getBody();
 
@@ -103,8 +103,8 @@ public class DigitalKontaktinformasjon {
 	private HttpHeaders createHeaders() {
 		TokenResponse clientCredentialToken = tokenConsumer.getClientCredentialToken(azureProperties.getAppScopedigdirkrr());
 		HttpHeaders headers = new HttpHeaders();
-		headers.setContentType(MediaType.APPLICATION_JSON);
-		headers.set(HttpHeaders.AUTHORIZATION, BEARER_PREFIX + clientCredentialToken.getAccess_token());
+		headers.setContentType(APPLICATION_JSON);
+		headers.setBearerAuth(clientCredentialToken.getAccess_token());
 		headers.add(NAV_CONSUMER_ID, APP_ID);
 		headers.add(NAV_CALL_ID, getCallId());
 		return headers;
